[tool.poetry]
name = "hb-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.19"
fastapi = "^0.110.1"
pydantic = "^2.7.2"
ultralytics = "^8.2.25"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini hb_core tests"
flake8 = "flake8 --config ../.flake8 hb_core tests"
black = "black hb_core tests"
isort = "isort hb_core tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
